
=======================================================
            WanT code:  Log of Changes 
=======================================================


17 Nov 2006      test10 made less computationally expensive. (AF)

11 Nov 2006      configure fixed; internal lapack and atlas libs updated according to 
                 the philosophy of quantum-espresso. Few changes in blc2wan.f90 . (AF)

03 Nov 2006      configure script for iotk included in the main configure stuff. (AF)

02 Nov 2006      Test script updated according to libtest.sh ; test05 littly changed. (AF)
                 Test12 modified: Si bulk in orthorombic instead of hexagonal cell; (BB)
                 configure syncronized to Quantum-ESPRESSO CVS: changes to include/
                 libs/ conf/ . (AF)

21 Oct 2006      References in test01 updated. bug fixed in the polarization routine. 
                 calculation of dipole moment using DFT chagre density added in test04. (AF)

20 Oct 2006      Bug fixed in get_monkpack.f90 : NaN was given when treating shifted
                 grids. Buf fixed also in the output fmt of summary.f90 . (AF & BB)

19 Oct 2006      Bug fixed in summary.f90: ions positions were badly written in crystal 
                 coords (when required with verbosity = 'high'). (AF)

17 Oct 2006      Script and references in test01 re-updated. (AF)

14 Oct 2006      Test references updated (except test05). (AF)

12 Oct 2006      log stuff added in wannier/ src; qexml is working with the new changes 
                 of the 1.2.0 version; more sophisticated check on fmt is done in
                 io_init; summary fmt updated; bug fixed in libtest.sh; (AF)

09 Oct 2006      ctools dir added; memstat.c routine taken from Q-Espresso; 
                 log_module.f90 added to libs. (AF)

03 Oct 2006      I/O of symmetry data implemented. Bug fixed and performance issues
                 tackled in qexpt.f90. qexml.f90 further implemented, according to